# cv_evaluator_app

./: .gitignore  README.md  app.py  pyproject.toml
src/: app_dataclasses.py  constants.py  file_management.py  llm_utils.py  page_candidates_overview.py  page_evaluate_candidate.py  page_export_questions.py  page_intervew.py  page_interview.py  page_second_interview.py  page_upload_cv.py  run_llms.py  streamlit_utils.py
src/dataclasses/: app_dataclasses.py
src/file_management/: file_management.py
src/llm_configs/: llm_message_templates.py
src/llms/: llm_utils.py  run_llms.py
src/llms/configs/: llm_message_templates.py
src/streamlit/: streamlit_utils.py
